--- a/.gitignore
+++ b/.gitignore
@@ -129,9 +129,9 @@ appsettings.json
 local.settings.json
 .python_packages
 sample.dat
-create-azure-budgets
-deploy
-deploy-eventgrid-to-subscriptions
+/create-azure-budgets
+/deploy
+/deploy-eventgrid-to-subscriptions
 
 
 # VS Code
